samples/_failures_safe/1761404943_10a874_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7fb69686.c: In function ‘print_log_stats’:
./samples/SAFE/__tmp_7fb69686.c:146:42: error: expected ‘)’ at end of input
  146 |     printf("Info entries: %u\n", analyzer
      |           ~                              ^
      |                                          )
./samples/SAFE/__tmp_7fb69686.c:146:5: error: expected declaration or statement at end of input
  146 |     printf("Info entries: %u\n", analyzer
      |     ^~~~~~
